--- a/assets/splash.html
+++ b/assets/splash.html
@@ -39,7 +39,7 @@
   <div id="splash">
     <img alt="" src="tray-icon/logo.png" />
     <span>
-      Hệ thống thi trực tuyến
+     Tra cứu
     </span>
   </div>
 </body>
